--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -550,7 +550,7 @@ footer{
         height: 320px;
     }
 }
-@media only screen and (max-width: 1980px){
+@media only screen and (max-width: 1440px){
 	.contact-info{
 		position: relative;
 		display: flex;
@@ -564,6 +564,7 @@ footer{
 		border-radius: 10px;
 		box-shadow: 1px 8px 10px 2px var(--first-shadow-color);
 		overflow: hidden;
+		font-size: 14px;
 	}
 }
 
