--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -566,6 +566,11 @@ footer{
 		overflow: hidden;
 		font-size: 14px;
 	}
+	.contact-info>h2 {
+	   	color: var(--color-white);
+	    	margin-bottom: 5px;
+		font-size: unset;
+}
 }
 
 /* ----- MEDIA QUERY == 900px / RESPONSIVE ----- */
